
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef enum encoder_id { ____Placeholder_encoder_id } encoder_id ;


 int BREAK_TO_DEBUGGER () ;
 int ENCODER_OBJECT_ID_HDMI_INTERNAL ;
 int ENCODER_OBJECT_ID_INTERNAL_DAC1 ;
 int ENCODER_OBJECT_ID_INTERNAL_DAC2 ;
 int ENCODER_OBJECT_ID_INTERNAL_DDI ;
 int ENCODER_OBJECT_ID_INTERNAL_KLDSCP_DAC1 ;
 int ENCODER_OBJECT_ID_INTERNAL_KLDSCP_DAC2 ;
 int ENCODER_OBJECT_ID_INTERNAL_KLDSCP_LVTMA ;
 int ENCODER_OBJECT_ID_INTERNAL_KLDSCP_TMDS1 ;
 int ENCODER_OBJECT_ID_INTERNAL_LVDS ;
 int ENCODER_OBJECT_ID_INTERNAL_LVTM1 ;
 int ENCODER_OBJECT_ID_INTERNAL_TMDS1 ;
 int ENCODER_OBJECT_ID_INTERNAL_TMDS2 ;
 int ENCODER_OBJECT_ID_INTERNAL_UNIPHY ;
 int ENCODER_OBJECT_ID_INTERNAL_UNIPHY1 ;
 int ENCODER_OBJECT_ID_INTERNAL_UNIPHY2 ;
 int ENCODER_OBJECT_ID_INTERNAL_UNIPHY3 ;
 int ENCODER_OBJECT_ID_INTERNAL_VCE ;
 int ENCODER_OBJECT_ID_MVPU_FPGA ;
 int ENCODER_OBJECT_ID_NONE ;
 int ENCODER_OBJECT_ID_NUTMEG ;
 int ENCODER_OBJECT_ID_TRAVIS ;

uint8_t dal_cmd_table_helper_encoder_id_to_atom2(
 enum encoder_id id)
{
 switch (id) {
 case 138:
  return ENCODER_OBJECT_ID_INTERNAL_LVDS;
 case 136:
  return ENCODER_OBJECT_ID_INTERNAL_TMDS1;
 case 135:
  return ENCODER_OBJECT_ID_INTERNAL_TMDS2;
 case 146:
  return ENCODER_OBJECT_ID_INTERNAL_DAC1;
 case 145:
  return ENCODER_OBJECT_ID_INTERNAL_DAC2;
 case 137:
  return ENCODER_OBJECT_ID_INTERNAL_LVTM1;
 case 143:
  return ENCODER_OBJECT_ID_HDMI_INTERNAL;
 case 147:
  return ENCODER_OBJECT_ID_TRAVIS;
 case 148:
  return ENCODER_OBJECT_ID_NUTMEG;
 case 139:
  return ENCODER_OBJECT_ID_INTERNAL_KLDSCP_TMDS1;
 case 142:
  return ENCODER_OBJECT_ID_INTERNAL_KLDSCP_DAC1;
 case 141:
  return ENCODER_OBJECT_ID_INTERNAL_KLDSCP_DAC2;
 case 149:
  return ENCODER_OBJECT_ID_MVPU_FPGA;
 case 144:
  return ENCODER_OBJECT_ID_INTERNAL_DDI;
 case 134:
  return ENCODER_OBJECT_ID_INTERNAL_UNIPHY;
 case 140:
  return ENCODER_OBJECT_ID_INTERNAL_KLDSCP_LVTMA;
 case 133:
  return ENCODER_OBJECT_ID_INTERNAL_UNIPHY1;
 case 132:
  return ENCODER_OBJECT_ID_INTERNAL_UNIPHY2;
 case 131:
  return ENCODER_OBJECT_ID_INTERNAL_UNIPHY3;
 case 129:
  return ENCODER_OBJECT_ID_INTERNAL_VCE;
 case 130:
  return ENCODER_OBJECT_ID_NONE;
 case 128:
  return ENCODER_OBJECT_ID_NONE;
 default:

  BREAK_TO_DEBUGGER();
  return ENCODER_OBJECT_ID_NONE;
 }
}
